--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 width: 100%;
                 height: 100%;
                 touch-action: none;
+                position: relative;
             }
         </style>
     </head>
